--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
-<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Exia Dashboard</title>
+        <link rel="stylesheet" href="./index.css">
+        <script src="index.js" defer></script>
+        <link rel="icon" href="./assets/images/exialogo.png">
+    </head>
+    <body>
+        <header>
+            <div class="logo">
+                    <img src="./assets/images/exialogo.png" alt="exia logo">
+                    <p>Exia Dashboard</p>
+                    <button>Se Connecter</button>
+            </div>
+        </header>
+        <main>
+            <div class="text">
+                <h1>Bienvenue sur le dashboard</h1>
+                <p>Exia est un système de bot personnalisé pour Discord. Il permet la gestion de serveur et propose plusieurs variantes selon vos besoins.</p>
+                <p>Une version publique est également disponible. Elle inclut principalement des commandes de gestion ainsi que quelques commandes fun.</p>
+            </div>
+            <div class="components">
+                <button type="button" id="invite-btn">Inviter le bot public</button>
+                <button type="button">Accéder au dashboard</button>
+            </div>
+        </main>
+        <footer>
+            <div class="grid-footer">
+                <div class="logo">
+                    <img src="./assets/images/exialogo.png" alt="Exia Logo">
+                </div>
+                <div class="text-footer">
+                    <p>Powered By Exia Corp</p>
+                </div>
+            </div>
+            <div class="grid-footer">
+                <h3>Communauté</h3>
+                <ul>
+                    <li>Notre Instagram</li>
+                    <li>Notre TikTok</li>
+                    <li>Notre YouTube</li>
+                    <li><a href="https://discord.com/invite/2S8bMnWjtU">Serveur Support</a></li>
+                </ul>
+            </div>
+            <div class="grid-footer">
+                <h3>Navigation</h3>
+                <ul>
+                    <li><a href="https://doc.exia.site">Documentation</a></li>
+                    <li><a href="https://exia.site">Site Vitrine</a></li>
+                    <li><a href="https://status.exia.site">Monitoring</a></li>
+                </ul>
+            </div>
+            <div class="grid-footer">
+                <h3>Légal</h3>
+                <ul>
+                    <li><a href="https://cgu.exia.site">Condition Général d'utilisation</a></li>
+                    <li><a href="https://cgv.exia.site">Condition Générale de Vente</a></li>
+                    <li><a href="https://pdc.exia.site">Politique de Confidentialité</a></li>
+                </ul>
+            </div>
+        </footer>
+    </body>
 </html>
