Mise en place de la page 404

--- a/pages/404.html
+++ b/pages/404.html
@@ -1,35 +1,38 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Exia Dashboard</title>
-        <link rel="stylesheet" href="./index.css">
-        <script src="index.js" defer></script>
-        <link rel="icon" href="./assets/images/exialogo.png">
+        <title>404 | Exia Dashboard</title>
+        <link rel="stylesheet" href="../style/404.css">
+        <script src=""></script>
     </head>
     <body>
         <header>
             <div class="logo">
-                    <img src="./assets/images/exialogo.png" alt="exia logo">
-                    <p>Exia Dashboard</p>
-                    <button id="login-btn">Se Connecter</button>
+                <img src="../assets/images/exialogo.png" alt="exia logo">
+                <p class="title">Exia Dashboard</p>
+                <div class="user-menu">
+                    <button>
+                        <img src="" alt="" id="avatar">
+                        <p id="username"></p>
+                    </button>
+                    <div class="nav">
+                        <a href="./nav/bot.html">Liste de vos bots</a>
+                        <a href="./nav/changelogs.html">Changelogs</a>
+                        <a href="./nav/settings.html">Paramètres</a>
+                    </div>
+                </div>
             </div>
         </header>
         <main>
-            <div class="text">
-                <h1>Bienvenue sur le dashboard</h1>
-                <p>Exia est un système de bot personnalisé pour Discord. Il permet la gestion de serveur et propose plusieurs variantes selon vos besoins.</p>
-                <p>Une version publique est également disponible. Elle inclut principalement des commandes de gestion ainsi que quelques commandes fun.</p>
-            </div>
-            <div class="components">
-                <button type="button" id="invite-btn">Inviter le bot public</button>
-                <button type="button" id="login-btn">Accéder au dashboard</button>
-            </div>
+            <h1>404</h1>
+            <p>La ressource demander n'as pas été trouver !</p>
         </main>
         <footer>
             <div class="grid-footer">
                 <div class="logo">
-                    <img src="./assets/images/exialogo.png" alt="Exia Logo">
+                    <img src="../assets/images/exialogo.png" alt="Exia Logo">
                 </div>
                 <div class="text-footer">
                     <p>Powered By Exia Corp</p>
