--- a/pages/nav/changelogs.html
+++ b/pages/nav/changelogs.html
@@ -2,10 +2,75 @@
 <html>
     <head>
         <script src="../../script/nav/bot.js"></script>
-        <link rel="stylesheet" href="../../styles/nav/bot.css">
+        <link rel="stylesheet" href="../../style/nav/changelogs.css">
         <title> Exia - Bot </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="../assets/images/logoexia.png">
+        <link rel="icon" href="../../assets/images/logoexia.png">
     </head>
+    <body>
+        <header>
+            <div class="logo">
+                <img src="../../assets/images/exialogo.png" alt="exia logo">
+                <p class="title">Exia Dashboard</p>
+                <div class="user-menu">
+                    <button>
+                        <img src="" alt="" id="avatar">
+                        <p id="username"></p>
+                    </button>
+                    <div class="nav">
+                        <a href="./nav/bot.html">Liste de vos bots</a>
+                        <a href="./nav/changelogs.html">Changelogs</a>
+                        <a href="./nav/settings.html">Paramètres</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <nav class="changelogs-nav">
+                <ul>
+                    <li>Application</li>
+                    <li>API</li>
+                    <li>Documentation</li>
+                    <li>Dashboard</li>
+                </ul>
+            </nav>
+            <h2>Voici les notes de mise à jours les plus récentes</h2>
+        </main>
+        <footer>
+            <div class="grid-footer">
+                <div class="logo">
+                    <img src="../../assets/images/exialogo.png" alt="Exia Logo">
+                </div>
+                <div class="text-footer">
+                    <p>Powered By Exia Corp</p>
+                </div>
+            </div>
+            <div class="grid-footer">
+                <h3>Communauté</h3>
+                <ul>
+                    <li>Notre Instagram</li>
+                    <li>Notre TikTok</li>
+                    <li>Notre YouTube</li>
+                    <li><a href="https://discord.com/invite/2S8bMnWjtU" target="_blank">Serveur Support</a></li>
+                </ul>
+            </div>
+            <div class="grid-footer">
+                <h3>Navigation</h3>
+                <ul>
+                    <li><a href="https://doc.exia.site">Documentation</a></li>
+                    <li><a href="https://exia.site">Site Vitrine</a></li>
+                    <li><a href="https://status.exia.site">Monitoring</a></li>
+                </ul>
+            </div>
+            <div class="grid-footer">
+                <h3>Légal</h3>
+                <ul>
+                    <li><a href="https://exia.site/terms-of-service" target="_blank">Conditions d'utilisations</a></li>
+                    <li><a href="https://exia.site/privacy-policy" target="_blank">Politique de confidentialité</a></li>
+                    <li><a href="https://exia.site/cookie-policy" target="_blank">Politique de cookies</a></li>
+                </ul>
+            </div>
+        </footer>
+    </body>
 </html>
