--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="../script/home.js"></script>
+        <script src="../script/home.js" defer></script>
         <link rel="stylesheet" href="../style/home.css">
         <title> Exia - Accueil </title>
         <meta charset="UTF-8">
