Chnagelogs et compte
mise en place de la page de changelogs relier a l'api afin de pouvoir accéder au note de mise à jours.

--- a/pages/nav/bot.html
+++ b/pages/nav/bot.html
@@ -2,13 +2,67 @@
 <html>
     <head>
         <script src="../../script/nav/bot.js"></script>
-        <link rel="stylesheet" href="../../styles/nav/bot.css">
+        <link rel="stylesheet" href="../../style/nav/bot.css">
         <title> Exia - Bot </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="../assets/images/logoexia.png">
+        <link rel="icon" href="../../assets/images/logoexia.png">
     </head>
     <body>
-        
+        <header>
+            <div class="logo">
+                <img src="../../assets/images/exialogo.png" alt="exia logo">
+                <p class="title">Exia Dashboard</p>
+                <div class="user-menu">
+                    <button id>
+                        <img src="" alt="" id="avatar">
+                        <p id="username"></p>
+                    </button>
+                    <div class="nav">
+                        <a href=./bot.html>Liste de vos bots</a>
+                        <a href="./changelogs.html">Changelogs</a>
+                        <a href="./settings.html">Paramètres</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+
+        </main>
+        <footer>
+            <div class="grid-footer">
+                <div class="logo">
+                    <img src="../../assets/images/exialogo.png" alt="Exia Logo">
+                </div>
+                <div class="text-footer">
+                    <p>Powered By Exia Corp</p>
+                </div>
+            </div>
+            <div class="grid-footer">
+                <h3>Communauté</h3>
+                <ul>
+                    <li>Notre Instagram</li>
+                    <li>Notre TikTok</li>
+                    <li>Notre YouTube</li>
+                    <li><a href="https://discord.com/invite/2S8bMnWjtU">Serveur Support</a></li>
+                </ul>
+            </div>
+            <div class="grid-footer">
+                <h3>Navigation</h3>
+                <ul>
+                    <li><a href="https://doc.exia.site">Documentation</a></li>
+                    <li><a href="https://exia.site">Site Vitrine</a></li>
+                    <li><a href="https://status.exia.site">Monitoring</a></li>
+                </ul>
+            </div>
+            <div class="grid-footer">
+                <h3>Légal</h3>
+                <ul>
+                    <li><a href="https://cgu.exia.site">Condition Général d'utilisation</a></li>
+                    <li><a href="https://cgv.exia.site">Condition Générale de Vente</a></li>
+                    <li><a href="https://pdc.exia.site">Politique de Confidentialité</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
