--- a/pages/nav/settings.html
+++ b/pages/nav/settings.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="../../script/nav/settings.js"></script>
-        <link rel="stylesheet" href="../../styles/nav/settings.css">
+        <link rel="stylesheet" href="../../style/nav/settings.css">
         <title> Exia - Paramètres </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,12 +19,47 @@
                         <p id="username"></p>
                     </button>
                     <div class="nav">
-                        <a href="./nav/bot.html">Liste de vos bots</a>
-                        <a href="./nav/changelogs.html">Changelogs</a>
-                        <a href="./nav/settings.html">Paramètres</a>
+                        <a href="./bot.html">Liste de vos bots</a>
+                        <a href="./changelogs.html">Changelogs</a>
+                        <a href="./settings.html">Paramètres</a>
                     </div>
                 </div>
             </div>
         </header>
+        <footer>
+            <div class="grid-footer">
+                <div class="logo">
+                    <img src="../../assets/images/exialogo.png" alt="Exia Logo">
+                </div>
+                <div class="text-footer">
+                    <p>Powered By Exia Corp</p>
+                </div>
+            </div>
+            <div class="grid-footer">
+                <h3>Communauté</h3>
+                <ul>
+                    <li>Notre Instagram</li>
+                    <li>Notre TikTok</li>
+                    <li>Notre YouTube</li>
+                    <li><a href="https://discord.com/invite/2S8bMnWjtU">Serveur Support</a></li>
+                </ul>
+            </div>
+            <div class="grid-footer">
+                <h3>Navigation</h3>
+                <ul>
+                    <li><a href="https://doc.exia.site">Documentation</a></li>
+                    <li><a href="https://exia.site">Site Vitrine</a></li>
+                    <li><a href="https://status.exia.site">Monitoring</a></li>
+                </ul>
+            </div>
+            <div class="grid-footer">
+                <h3>Légal</h3>
+                <ul>
+                    <li><a href="https://cgu.exia.site">Condition Général d'utilisation</a></li>
+                    <li><a href="https://cgv.exia.site">Condition Générale de Vente</a></li>
+                    <li><a href="https://pdc.exia.site">Politique de Confidentialité</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
